webpack/scss/main.scss
@charset "UTF-8";

@import url('https://fonts.googleapis.com/css?family=Roboto+Slab');
@import url('https://fonts.googleapis.com/css?family=Roboto');

$font-family-base: 'Roboto', 'Helvetica', 'Arial', sans-serif;
$font-family-serif: 'Roboto Slab', 'Georgia', 'Times New Roman', serif;
$font-family-sans-serif: $font-family-base;
$font-size-base: 16px !default;

$icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
@import "~bootstrap-sass/assets/stylesheets/bootstrap";

$fa-font-path: "~font-awesome/fonts";
@import "~font-awesome/scss/font-awesome.scss";

body {
  padding-bottom: 30px;
}

h1, h2, h3 {
  font-family: $font-family-serif;
  font-weight: 400;
}

h1 {
  font-weight: 700;
}

.navbar {
  border-bottom: 1px solid rgba(255, 255, 255, 0.8);
}

.navbar a {
  color: rgba(255, 255, 255, 0.8);
}

.navbar a:hover {
  background: none;
  color: rgba(255, 255, 255, 1.0);
}

.jumbotron, .minitron {
  margin-top: -20px;
  margin-bottom: 25px;
  background-image: url(lake.jpg);
  background-position: 50% 0%;
  background-size: cover;
}

.jumbotron a {
  color: #ffffff;
  font-weight: bold;
}

.jumbotron {
  color: #ffffff;
  padding-top: 120px;
}

.jumbotron p {
  text-shadow: 0px 0px 14px rgba(0, 0, 0, 1);
  color: rgba(255, 255, 255, 0.8);
  margin-bottom: 30px;
}

.jumbotron .btn {
  text-shadow: none;
  font-weight: normal;
}

.minitron {
  height: 100px;
}

.images-block h3, .attachments-block h3, .address-block h3 {
  margin-top: 0px;
}

.light-block, .grey-block, .images-block, .attachments-block, .address-block, .pullquote-block, .children-block {
  padding: 20px;
  margin-top: 20px;
  margin-bottom: 20px;
}

.grey-block, .images-block, .attachments-block, .address-block {
  background-color: #EAEAEA;
}

.light-block, .children-block {
  border: 1px solid #EAEAEA;
}

.attachments-block ul {
  padding-left: 0px;
  list-style-type: none;
}

.label.label-xs {
  font-size: 40%;
}

blockquote {
  font-family: $font-family-serif;
  border: none;
  margin: 0;
  padding: 10px;
  font-size: 140%;
  font-weight: 400;
  letter-spacing: 1px;
}

blockquote::before{
  content: "\201C"; /*Unicode for Left Double Quote*/

  /*Font*/
  font-family: Georgia, serif;
  font-size: 80px;
  font-weight: bold;
  color: rgba(0, 0, 0, 0.15);

  /*Positioning*/
  position: absolute;
  left: 20px;
  top: 8px;
}

footer {
  margin-top: 20px;
  padding-top: 30px;
  border-top: 1px solid #EAEAEA;
}

.contact {
  text-align: center;
}

